2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* bioforceGUI.fig: Added.  GUI for common analysis tools like measuring slopes, relaxation times, ranges, etc...
	* bioforceGUI.m: Added. same.